kubernetes/react-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: react-app
  name: react-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: react-app
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/mern-app: "true"
        io.kompose.service: react-app
    spec:
      containers:
        - image: react-app
          name: react-app
          ports:
            - containerPort: 3000
          resources: {}
          stdin: true
          volumeMounts:
            - mountPath: /usr/src/app
              name: react-app-claim0
            - mountPath: /usr/src/app/node_modules
              name: react-app-claim1
      restartPolicy: Always
      volumes:
        - name: react-app-claim0
          persistentVolumeClaim:
            claimName: react-app-claim0
        - name: react-app-claim1
          persistentVolumeClaim:
            claimName: react-app-claim1
status: {}
