kubernetes/mern-app-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: mern-app
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/mern-app: "true"
  podSelector:
    matchLabels:
      io.kompose.network/mern-app: "true"
